# data-contract-enforcer

./: .gitignore  DOMAIN_NOTES.md  README.md  ai_metrics.json  command.md  inject_violation.py  make_mock_data.py  openrouter_client.py  pyproject.toml  run_ai_metrics.sh  test_report.json
contract_registry/: subscriptions.yaml
contracts/: ai_extensions.py  attributor.py  generator.py  report_generator.py  runner.py  schema_analyzer.py
enforcer_report/: report_20260401.txt  report_data.json
generated_contracts/: events.yaml  events_dbt.yml  extractions.yaml  extractions_broken.yaml  extractions_broken_dbt.yml  extractions_dbt.yml
outputs/traces/: runs.jsonl
outputs/week1/: intent_records.jsonl
outputs/week2/: verdicts.jsonl
outputs/week3/: extractions.jsonl  extractions_broken.jsonl
outputs/week4/: data-contract-enforcer.code-workspace  lineage_snapshots.jsonl
outputs/week5/: events.jsonl
schema_snapshots/: embedding_baselines.npz
schema_snapshots/events/: 20260401T120356.yaml  20260401T195809.yaml
schema_snapshots/extractions/: 20260401T120328.yaml  20260401T195808.yaml
schema_snapshots/week7-events/: 20260401T210247.yaml  20260401T210357.yaml  20260403T161309.yaml
schema_snapshots/week7-extractions/: 20260401T210247.yaml  (+9 more)
schema_snapshots/week7-extractions-broken/: 20260404T144916.yaml  baselines.json
ui/: README.md  build_dashboard.py  dashboard.html
validation_reports/: schema_evolution.json  test_broken_report.json  test_report.json  week3_broken.json  week3_clean.json  week3_violated.json
violation_log/: violations.jsonl
